# ex4

./: CMakeLists.txt
src/: AIPlayer.cpp  Board.cpp  Game.cpp  Game.h  GameLogic.cpp  GameParameters.cpp  Player.cpp  RemotePlayer.h  main.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  Board.h  BoardCoordinates.cpp  BoardCoordinates.h  Client.cpp  Client.h  Game.cpp  GameLogic.h  GameParameters.cpp  GameParameters.h  HumanPlayer.cpp  HumanPlayer.h  HumanPlayerSender.cpp  HumanPlayerSender.h  MiniMaxSimulator.cpp  MiniMaxSimulator.h  Player.h  RemotePlayer.cpp  RemotePlayer.h  StandartGameLogic.cpp  StandartGameLogic.h  main.cpp
src/server/: Server.cpp  Server.h  main_server.cpp
tests/: BoardTest.cpp  GameLogicTest.cpp  MiniMaxSimulatorTest.cpp
